# APIs

./: .gitmodules  README.md
blogAPI/: Dockerfile  README.md  blog.db  main.py
blogAPI/wif_Django/: db.sqlite3  pyproject.toml
blogAPI/wif_Django/blog/: settings.py  urls.py
blogAPI/wif_Django/user/: models.py  serializers.py  urls.py  views.py
blogAPI/wif_Django/user/migrations/: 0001_initial.py
blogAPI/wif_FastAPI/: pyproject.toml
logbookAPI/: main.py
logbookAPI/engine/: __init__.py  logs.db  models.py  schemas.py
logbookAPI/routes/: __init__.py  book.py  index.py  log.py
siwesAPI/: Dockerfile  README.md  main.py  requirements.txt
siwesAPI/routes/: __init__.py  book.py  index.py  log.py
